--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "riwalenn@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "ext-pdo": "*"
+    },
     "autoload": {
         "psr-4": {
             "Framework\\": "src/Framework",
@@ -18,5 +20,8 @@
             "src/App/Config/Routes.php",
             "src/App/Config/Middleware.php"
         ]
+    },
+    "scripts": {
+        "phpiggy": "php cli.php"
     }
 }
